# counting_particles_paper

./: .gitignore  README.md  compute_weights_igg_reference_vols.py  compute_weights_spike_experimental.py  compute_weights_spike_experimental_noise_images.py  compute_weights_spike_experimental_noise_poses.py  compute_weights_spike_synthetic.py  figure_1b_synthetic_spike.py  figure_1c_and_supplementary_spike_experimental.py  figure_1e_one_dim_latent_density.py  figure_1f_two_dim_latent_density.py  pyproject.toml  utils.py
data/: 3D_classification_noisy_shifts.npy  error_predicted_recovar_ground_truth_poses_80_20_ground_truth_recovar_filtered_aligned.npy  error_predicted_recovar_noisy_images_ground_truth_recovar_filtered_aligned.npy  error_predicted_recovar_noisy_poses_magn_10_ground_truth_recovar_filtered_aligned.npy  error_predicted_recovar_noisy_poses_magn_2_ground_truth_recovar_filtered_aligned.npy  error_predicted_recovar_noisy_poses_magn_4_ground_truth_recovar_filtered_aligned.npy  error_predicted_recovar_noisy_poses_magn_4_recovar_filtered_aligned.npy  error_predicted_recovar_noisy_poses_magn_6_ground_truth_recovar_filtered_aligned.npy  error_predicted_recovar_noisy_poses_magn_8_ground_truth_recovar_filtered_aligned.npy  error_predicted_recovar_noisy_shifts_level_0_ground_truth_recovar_filtered_aligned.npy  error_predicted_recovar_noisy_shifts_level_1_ground_truth_recovar_filtered_aligned.npy  error_predicted_recovar_noisy_shifts_level_1_recovar_filtered_aligned.npy  error_predicted_recovar_noisy_shifts_level_2_ground_truth_recovar_filtered_aligned.npy  (+20 more)
(+48 files in other folders)
