[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "counting-particles-paper"
version = "0.1.0"
description = "Analysis code for counting particles in cryo-EM using histogram reweighting"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Luke Evans", email = "levans@flatironinstitute.org"}
]

dependencies = [
    "numpy",
    "jax",
    "jaxlib",
    "matplotlib",
    "scipy",
    "seaborn",
    "cvxpy",
    "tabulate",
    "mrcfile",
]

[tool.setuptools.packages.find]
namespaces = false