[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "counting-particles-paper"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
authors = [
    {name = "Luke Evans", email = "levans@flatironinstitute.org"}
]

dependencies = [
    "numpy",
    "jax",
    "jaxlib",
    "matplotlib",
    "scipy",
    "seaborn",
    "cvxpy",
    "tabulate",
    "mrcfile",
]

[tool.setuptools.packages.find]
namespaces = false
